Bug 387145 - Can't open file in Projects tree using keyboard
Summary: Can't open file in Projects tree using keyboard
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 17.08.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: accessibility
: 393293 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-11-20 09:46 UTC by mokush
Modified: 2018-04-27 22:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mokush 2017-11-20 09:46:00 UTC
Using the Projects plugin, in the Projects file list pane, there is no way to open the focused file using only the keyboard.

To reproduce:

1. Enable the Projects plugin and Open a Kate project
2. Focus the Projects pane file list
3. Move between the files using the Up/Down keys
4. Try to open the focused file using the Enter key

Result:
Nothing happens.

Expected:
The focused/highlighted file should open for editing.
Comment 1 Christoph Cullmann 2017-12-20 19:32:02 UTC
Git commit 4903dc5cdb809440adea416c8aff5c51db7d3fdd by Christoph Cullmann.
Committed on 20/12/2017 at 19:31.
Pushed by cullmann into branch 'master'.

allow to switch to a file with enter

CHANGELOG: allow to switch between files in the project plugin treeview via keyboard input

M  +2    -0    addons/project/kateprojectviewtree.cpp

https://commits.kde.org/kate/4903dc5cdb809440adea416c8aff5c51db7d3fdd
Comment 2 Gregor Mi 2018-04-27 22:27:20 UTC
*** Bug 393293 has been marked as a duplicate of this bug. ***