allow to switch to a file with enter

BUG: 387145

CHANGELOG: allow to switch between files in the project plugin treeview via keyboard input